--- a/CSRF/alert.html
+++ b/CSRF/alert.html
@@ -7,7 +7,8 @@
 <button onclick="myFunction()">Try it</button>
 
 <script>
-function myFunction() {
+function myFunction() 
+{
   alert("I am an alert box!");
 }
 </script>
